# micro_posix

./: CMakeLists.txt  run.sh
boot/: CMakeLists.txt  boot.S  init.c
include/arch/i386/: cpu.h  gdt.h  idt.h  isr.h  keyboard.h  pic.h  timer.h  tty.h
include/libc/: stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h
kernel/: CMakeLists.txt  kernel.c
kernel/arch/i386/: CMakeLists.txt  cpu.c  gdt.c  gdt_asm.S  idt.c  idt_asm.S  isr.c  isr_asm.S  keyboard.c  linker.ld  pic.c  timer.c  tty.c
libc/: CMakeLists.txt  stdio.c  string.c
tools/: createimage.sh  debug.sh
